--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
-    
+
   <!-- Third Party Scripts -->
   <script src="bower_components/commonjs-require/commonjs-require.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
+  <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="node_modules/gmaps/gmaps.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
 
   <!-- Application Scripts -->
