--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   </head>
   <body>
 
+<div id="app"></div>
+
   <!-- Third Party Scripts -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
   <script src="bower_components/commonjs-require/commonjs-require.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
-  <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script src="node_modules/gmaps/gmaps.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
 
   <!-- Application Scripts -->
