bicycling layer added

--- a/laws.html
+++ b/laws.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="dist/styles/main.css">
 
     <script src="bower_components/modernizr/modernizr.js"></script>
-
   </head>
   <body>
 
@@ -28,13 +27,13 @@
       </li>
     </ul>
 
-<div id="app"></div>
+<h1>hallo</h1>
+<div id="laws"></div>
 
 
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
-  <script src="node_modules/gmaps.layers/gmaps.layers.js"></script> 
   <script src="bower_components/commonjs-require/commonjs-require.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
