created map view, got hbs showing correctly

--- a/index.html
+++ b/index.html
@@ -16,19 +16,8 @@
   </head>
   <body>
 
-    <ul>
-      <li>
-        <a href="http://localhost:9000/#brl"><button class="brl">Bike Rack Locations</button></a>
-      </li>
-      <li>
-        <a href="http://localhost:9000/#rental"><button class="rental-bikes">Rental Bike Locations</button></a>
-      </li>
-      <li>
-        <a href="http://localhost:9000/#laws"><button class="laws">Laws and Safety</button></a>
-      </li>
-    </ul>
-    <div id="app"></div>
-
+    <div id="app">
+    </div>
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
