console logging new brl

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
 
-    <div id="app">
-    </div>
+    <div id="app"></div>
+    
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
