--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
     <script src="bower_components/modernizr/modernizr.js"></script>
 
+    <script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+
   </head>
   <body>
 
     <div id="app"></div>
-    
+
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
