--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
 
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+
     <link rel="stylesheet" href="dist/styles/main.css">
 
     <script src="bower_components/modernizr/modernizr.js"></script>
