--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
     <script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
 
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
   </head>
   <body>
 
