--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </head>
   <body>
 
-    <div id="app"></div>
+    <div id="app">
+      <div id="legend"></div>
+    </div>
 
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
