--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Third Party Scripts -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeNNe_RPtFSRi9wBzvBVEe5KD-6VssdYM"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.min.js"></script>
-  <script src="node_modules/gmaps.layers/gmaps.layers.js"></script>
+  <script src="vendor/gmaps.layers.js"></script>
   <script src="bower_components/commonjs-require/commonjs-require.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
